# file-converter-seo-app

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .slugignore  .sonarqube.properties  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Create_Desktop_Shortcut.vbs  DESKTOP_SHORTCUT_GUIDE.md  File_Converter_SEO.bat  HEROKU_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOCAL_SETUP.md  QUICK_START.md  README.md  README_HOOKS.md  SANITY_TEST_REPORT.md  SECURITY.md  TESTING.md  TESTING_AND_HOOKS_GUIDE.md  TESTING_SUMMARY.md  TEST_EXECUTION_REPORT.md  VS_CODE_SETUP.md  app.json  app.py  config.yaml  coverage.json  generate_icon.py  heroku.yml  push_to_github.py  pyproject.toml  pyrightconfig.json  pytest.ini  replit.md  requirements-prod.txt  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
converters/: __init__.py  csv_converter.py  docx_converter.py  txt_converter.py  wxr_converter.py
docs/: CODE_QUALITY.md  GIT_HOOKS_SETUP.md  HEROKU_DEPLOYMENT.md
docs/workflows/: DEPLOYMENT_WORKFLOWS.md  DEVELOPMENT_WORKFLOWS.md  MAINTENANCE_WORKFLOWS.md  USER_WORKFLOWS.md
scripts/: install-hooks.bat  install-hooks.sh  run-quality-checks.ps1  setup.ps1
templates/: html_template.html
tests/: README.md  __init__.py  conftest.py
tests/converters/: __init__.py  test_csv_converter.py  test_docx_converter.py  test_txt_converter.py  test_wxr_converter.py
tests/integration/: test_conversion_pipeline.py
tests/utils/: test_file_utils.py  test_frontmatter_generator.py  test_image_handler.py  test_seo_enhancer.py
utils/: __init__.py  file_utils.py  frontmatter_generator.py  html_generator.py  image_handler.py  seo_enhancer.py  seo_validator.py  static_site_generator.py  template_manager.py
